# splatter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
examples/: Cargo.toml  README.md
examples/draw/: draw.rs  draw_arrow.rs  draw_blend.rs  draw_capture.rs  draw_capture_hi_res.rs  draw_loop.rs  draw_mesh.rs  draw_polygon.rs  draw_polyline.rs  draw_text.rs  draw_text_path.rs  draw_texture.rs  draw_texture_sampler.rs  draw_textured_mesh.rs  draw_textured_path.rs  draw_textured_polygon.rs  draw_transform.rs
examples/offline/: colors.rs  quadtree.rs  tree.rs
examples/rust_basics/: 1_nannou_events.rs  2_variables_window_console.rs  3_variable_scope.rs  4_conditionals.rs  5_loops.rs  6_functions.rs
examples/splatter_basics/: all_functions.rs  loop_mode.rs  multi_window.rs  multi_window_draw.rs  simple_window.rs  window_coordinates.rs
examples/templates/: template_app.rs  template_sketch.rs
generative_design/: Cargo.toml
generative_design/color/: p_1_0_01.rs  p_1_1_1_01.rs  p_1_1_2_01.rs  p_1_2_1_01.rs  p_1_2_2_01.rs  p_1_2_3_01.rs  p_1_2_3_02.rs  p_1_2_3_03.rs  p_1_2_3_04.rs
generative_design/data_trees/: m_5_1_01.rs
generative_design/dynamic_data_structure/: m_6_1_01.rs  m_6_1_02.rs  m_6_1_03.rs  m_6_2_01.rs
generative_design/image/: p_4_0_01.rs  p_4_1_1_01.rs  p_4_1_2_01.rs  p_4_1_2_02.rs  p_4_3_1_01.rs  p_4_3_1_02.rs  p_4_3_2_01.rs
generative_design/oscillation_figures/: m_2_1_01.rs  m_2_2_01.rs  m_2_3_01.rs  m_2_3_02.rs  m_2_5_01.rs  m_2_5_02.rs
generative_design/random_and_noise/: m_1_1_01.rs  m_1_2_01.rs  m_1_3_01.rs  m_1_3_02.rs  m_1_3_03.rs  m_1_5_02.rs  m_1_5_03.rs  m_1_5_04.rs
generative_design/shape/: p_2_0_01.rs  p_2_0_02.rs  p_2_0_03.rs  p_2_1_1_01.rs  p_2_1_1_02.rs  p_2_1_1_03.rs  p_2_1_2_01.rs  p_2_1_2_02.rs  p_2_1_2_03.rs  p_2_1_2_04.rs  p_2_1_3_01.rs  p_2_1_3_02.rs  p_2_1_3_03.rs  p_2_1_3_04.rs  p_2_1_3_05.rs  p_2_1_5_01.rs  p_2_1_5_02.rs  p_2_1_5_03.rs  p_2_2_1_01.rs  p_2_2_1_02.rs  p_2_2_3_01.rs  p_2_2_4_01.rs  p_2_2_4_02.rs  p_2_2_5_01.rs  p_2_2_6_01.rs  p_2_3_1_01.rs  p_2_3_2_01.rs  p_2_3_3_01.rs
generative_design/type/: p_3_0_01.rs  p_3_1_3_01.rs  p_3_1_3_02.rs  p_3_1_3_03.rs  p_3_1_3_04.rs  p_3_2_1_01.rs
guide/: LICENSE-APACHE  LICENSE-MIT  README.md  book.toml
guide/book_tests/: Cargo.toml  build.rs
guide/src/: SUMMARY.md  api_reference.md  changelog.md  code_of_conduct.md  community_tutorials.md  contributing.md  contributors.md  developer_reference.md  getting_started.md  showcases.md  tutorials.md  welcome.md  why_nannou.md
nature_of_code/: Cargo.toml
nature_of_code/chp_01_vectors/: 1_10_motion101_acceleration.rs  1_11_motion101_acceleration_array.rs  1_1_bouncingball_novectors.rs  1_2_bouncingball_vectors.rs  1_2_bouncingball_vectors_object.rs  1_3_vector_subtraction.rs  1_4_vector_multiplication.rs  1_5_vector_magnitude.rs  1_6_vector_normalize.rs  1_7_motion101.rs  1_8_motion101_acceleration.rs  1_9_motion101_acceleration.rs
nature_of_code/chp_02_forces/: 2_10_exercise_attract_repel.rs  2_1_forces.rs  2_2_forces_many.rs  2_3_forces_many_real_gravity.rs  2_4_forces_friction.rs  2_4_forces_no_friction.rs  2_5_fluid_resistance.rs  2_6_attraction.rs  2_7_attraction_many.rs  2_8_mutual_attraction.rs  2_forces_many_mutual_boundaries.rs
nature_of_code/chp_03_oscillation/: 3_01_angular_motion.rs  3_02_forces_angular_motion.rs  3_04_exercise_spiral.rs  3_04_polar_to_cartesian.rs  3_04_polar_to_cartesian_trail.rs  3_05_simple_harmonic_motion.rs  3_06_simple_harmonic_motion.rs  3_07_oscillating_objects.rs  3_08_static_wave_lines.rs  3_09_exercise_additive_wave.rs  3_09_wave.rs  3_09_wave_a.rs  3_09_wave_b.rs  3_09_wave_c.rs  3_10_exercise_oop_wave.rs  3_10_pendulum_example.rs  3_10_pendulum_example_simplified.rs  3_11_exercise_additive_wave.rs  3_11_spring.rs  3_16_exercise_springs.rs  3_16_exercise_springs_array.rs  3_exercise_spring_sine.rs  3_extra_oscillating_body.rs  3_extra_oscillating_up_and_down.rs  3_multiple_oscillations.rs  3_oop_wave_particles.rs
nature_of_code/chp_04_systems/: 4_01_single_particle.rs  4_01_single_particle_trail.rs  4_02_vector_particle.rs  4_03_exercise_moving_particle_system.rs  4_03_particle_system_type.rs  4_04_system_of_systems.rs  4_05_particle_system_inheritance_polymorphism.rs  4_06_exercise_shatter.rs  4_06_particle_system_forces.rs  4_07_particle_system_forces_repeller.rs  4_10_exercise_particle_intersection.rs  4_10_exercise_particle_repel.rs
nature_of_code/chp_06_agents/: 6_01_seek.rs  6_01_seek_trail.rs  6_02_arrive.rs  6_03_stay_within_walls.rs  6_03_stay_within_walls_trail.rs
nature_of_code/chp_07_cellular_automata/: 7_01_wolfram_ca_figures.rs  7_01_wolfram_ca_simple.rs  7_02_game_of_life_simple.rs  7_03_game_of_life_oop.rs  7_04_exercise_wolfram_ca_scrolling.rs  7_game_of_life_wrap_around.rs  7_hexagon_cells.rs
nature_of_code/chp_08_fractals/: 8_1_recursion.rs  (+4 more)
splatter/: Cargo.toml  README.md
splatter/src/: app.rs  event.rs  io.rs  lib.rs  prelude.rs  state.rs  window.rs
splatter/src/draw/: mod.rs
splatter/src/draw/mesh/: builder.rs
splatter/src/draw/primitive/: path.rs  text.rs
splatter/src/draw/renderer/: mod.rs
splatter/src/frame/: raw.rs
splatter/src/geom/: mod.rs  path.rs
splatter/src/text/: glyph.rs  line.rs  mod.rs
splatter/tests/: geom_tests.rs
splatter_core/: Cargo.toml  README.md
splatter_egui/: Cargo.toml  README.md
splatter_egui/src/: lib.rs
splatter_egui_demo_app/: Cargo.toml  README.md
splatter_egui_demo_app/src/: main.rs
splatter_mesh/: Cargo.toml  README.md
splatter_mesh/src/: lib.rs  vertex.rs
splatter_wgpu/: Cargo.toml  README.md
(+59 files in other folders)
