[workspace]
members = [
    "examples",
    "generative_design",
    "guide/book_tests",
    "nannou",
    "nannou_core",
    "nannou_egui",
    "nannou_egui_demo_app",
    "nannou_mesh",
    "nannou_wgpu",
    "nature_of_code",
    "scripts/run_all_examples",
    "scripts/set_version",
]

# Required for wgpu v0.10 feature resolution.
resolver = "2"
