[workspace]
members = [
    "examples",
    "generative_design",
    "guide/book_tests",
    "splatter",
    "splatter_core",
    "splatter_egui",
    "splatter_egui_demo_app",
    "splatter_mesh",
    "splatter_wgpu",
    "nature_of_code",
    "scripts/run_all_examples",
    "scripts/set_version",
]

# Required for wgpu v0.10 feature resolution.
resolver = "2"
