[workspace]
members = [
    "splatter",
    "splatter_core",
    "splatter_egui",
    "splatter_egui_demo_app",
    "splatter_mesh",
    "splatter_wgpu",
    "examples",
    "generative_design",
    "guide/book_tests",
    "nature_of_code",
    "scripts/run_all_examples",
]

# Required for wgpu v0.10 feature resolution.
resolver = "2"
