[package]
name = "splatter_egui"
version = "0.1.0"
authors = [
    "Alexandru Ene <alex.ene0x11@gmail.com>",
    "mitchmindtree <mitchell.nordine@gmail.com>",
]
edition = "2018"
license = "MIT/Apache-2.0"
description = "egui integration for splatter"
repository = "https://github.com/AlexEne/splatter_egui"
readme = "../README.md"

[dependencies]
egui_wgpu_backend = "0.14"
egui = "0.23.0"
winit = "0.26"
splatter = { version = "0.1.0", path = "../splatter" }
