[package]
name = "splatter_egui_demo_app"
version = "0.1.0"
authors = ["mitchmindtree <mail@mitchellnordine.com>"]
edition = "2018"
publish = false

[dependencies]
splatter_egui = { version = "0.1.0", path = "../splatter_egui" }
splatter = { version = "0.1.0", path = "../splatter" }
egui_demo_lib = "0.15"
