[package]
name = 'book_tests'
version = "0.1.0"
authors = ['mitchmindtree <mitchell.nordine@gmail.com>']
edition = '2018'
description = 'For testing the splatter-guide, while including the splatter dependencies.'

[build-dependencies]
# Temporarily use git dependency until budziq/rust-skeptic#121 is merged and published.
# https://github.com/budziq/rust-skeptic/pull/121
skeptic = { git = "https://github.com/mitchmindtree/rust-skeptic", branch = "1.45-extern" }
#skeptic = "0.13"

[dev-dependencies]
# Temporarily use git dependency until budziq/rust-skeptic#121 is merged and published.
# https://github.com/budziq/rust-skeptic/pull/121
skeptic = { git = "https://github.com/mitchmindtree/rust-skeptic", branch = "1.45-extern" }
#skeptic = "0.13"
splatter = { version = "0.1.0", path = "../../splatter" }
